fix image distortion

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -25,6 +25,7 @@
   margin-bottom: 40px;
   height: 85vh;
   width: 50vw;
+  object-fit: cover;
 }
 
 .modal__close-img {
@@ -46,6 +47,7 @@
     margin-bottom: 50vh;
     height: 50vh;
     width: 100vw;
+    object-fit: cover;
   }
 
   .modal__close-img {
