--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -13,6 +13,7 @@
   height: 204px;
   border: 1px solid #EBEBEB;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 600px) {
